--- a/vital-aids/package.json
+++ b/vital-aids/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
+    "@supabase/supabase-js": "github:supabase/supabase-js",
     "docxtemplater": "^3.60.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -20,7 +21,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.0",
-    "react-textarea-autosize": "^8.5.7"
+    "react-textarea-autosize": "^8.5.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
