--- a/vital-aids/package.json
+++ b/vital-aids/package.json
@@ -1,38 +1,6 @@
 {
-  "name": "vital-aids",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "@google/generative-ai": "^0.22.0",
-    "@supabase/supabase-js": "github:supabase/supabase-js",
-    "docxtemplater": "^3.60.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "file-saver": "^2.0.5",
-    "lucide-react": "^0.475.0",
-    "next": "15.1.7",
-    "pizzip": "^3.1.8",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-markdown": "^10.0.0",
-    "react-textarea-autosize": "^8.5.7",
-    "zustand": "^5.0.3"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@supabase/supabase-js": "^2.49.1",
+    "next": "^15.2.0"
   }
 }
