--- a/vital-aids/tsconfig.json
+++ b/vital-aids/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/supabase-db.js", "src/app/supabase-db.js"],
   "exclude": ["node_modules"]
 }
