fixed all issues

--- a/vital-aids/package.json
+++ b/vital-aids/package.json
@@ -1,6 +1,146 @@
 {
+  "name": "vital-aids",
+  "version": "1.0.0",
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "index.js",
   "dependencies": {
+    "@google/generative-ai": "^0.22.0",
     "@supabase/supabase-js": "^2.49.1",
-    "next": "^15.2.0"
-  }
+    "@tailwindcss/postcss": "^4.0.9",
+    "bail": "^2.0.2",
+    "browserslist": "^4.24.4",
+    "busboy": "^1.6.0",
+    "caniuse-lite": "^1.0.30001701",
+    "ccount": "^2.0.1",
+    "character-entities": "^2.0.2",
+    "character-entities-html4": "^2.1.0",
+    "character-entities-legacy": "^3.0.0",
+    "character-reference-invalid": "^2.0.1",
+    "client-only": "^0.0.1",
+    "color": "^4.2.3",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "color-string": "^1.9.1",
+    "comma-separated-tokens": "^2.0.3",
+    "csstype": "^3.1.3",
+    "debug": "^4.4.0",
+    "decode-named-character-reference": "^1.0.2",
+    "dequal": "^2.0.3",
+    "detect-libc": "^2.0.3",
+    "devlop": "^1.1.0",
+    "dotenv": "^16.4.7",
+    "electron-to-chromium": "^1.5.109",
+    "enhanced-resolve": "^5.18.1",
+    "escalade": "^3.2.0",
+    "estree-util-is-identifier-name": "^3.0.0",
+    "extend": "^3.0.2",
+    "fraction.js": "^4.3.7",
+    "graceful-fs": "^4.2.11",
+    "hast-util-to-jsx-runtime": "^2.3.5",
+    "hast-util-whitespace": "^3.0.0",
+    "html-url-attributes": "^3.0.1",
+    "inline-style-parser": "^0.2.4",
+    "is-alphabetical": "^2.0.1",
+    "is-alphanumerical": "^2.0.1",
+    "is-arrayish": "^0.3.2",
+    "is-decimal": "^2.0.1",
+    "is-hexadecimal": "^2.0.1",
+    "is-plain-obj": "^4.1.0",
+    "jiti": "^2.4.2",
+    "lightningcss": "^1.29.1",
+    "lightningcss-win32-x64-msvc": "^1.29.1",
+    "longest-streak": "^3.1.0",
+    "lucide-react": "^0.477.0",
+    "mdast-util-from-markdown": "^2.0.2",
+    "mdast-util-mdx-expression": "^2.0.1",
+    "mdast-util-mdx-jsx": "^3.2.0",
+    "mdast-util-mdxjs-esm": "^2.0.1",
+    "mdast-util-phrasing": "^4.1.0",
+    "mdast-util-to-hast": "^13.2.0",
+    "mdast-util-to-markdown": "^2.1.2",
+    "mdast-util-to-string": "^4.0.0",
+    "micromark": "^4.0.2",
+    "micromark-core-commonmark": "^2.0.3",
+    "micromark-factory-destination": "^2.0.1",
+    "micromark-factory-label": "^2.0.1",
+    "micromark-factory-space": "^2.0.1",
+    "micromark-factory-title": "^2.0.1",
+    "micromark-factory-whitespace": "^2.0.1",
+    "micromark-util-character": "^2.1.1",
+    "micromark-util-chunked": "^2.0.1",
+    "micromark-util-classify-character": "^2.0.1",
+    "micromark-util-combine-extensions": "^2.0.1",
+    "micromark-util-decode-numeric-character-reference": "^2.0.2",
+    "micromark-util-decode-string": "^2.0.1",
+    "micromark-util-encode": "^2.0.1",
+    "micromark-util-html-tag-name": "^2.0.1",
+    "micromark-util-normalize-identifier": "^2.0.1",
+    "micromark-util-resolve-all": "^2.0.1",
+    "micromark-util-sanitize-uri": "^2.0.1",
+    "micromark-util-subtokenize": "^2.1.0",
+    "micromark-util-symbol": "^2.0.1",
+    "micromark-util-types": "^2.0.2",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.8",
+    "next": "^15.2.0",
+    "node-releases": "^2.0.19",
+    "normalize-range": "^0.1.2",
+    "parse-entities": "^4.0.2",
+    "picocolors": "^1.1.1",
+    "postcss": "^8.5.3",
+    "postcss-value-parser": "^4.2.0",
+    "property-information": "^7.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.0.0",
+    "react-textarea-autosize": "^8.5.7",
+    "regenerator-runtime": "^0.14.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
+    "scheduler": "^0.25.0",
+    "semver": "^7.7.1",
+    "sharp": "^0.33.5",
+    "simple-swizzle": "^0.2.2",
+    "source-map-js": "^1.2.1",
+    "space-separated-tokens": "^2.0.2",
+    "streamsearch": "^1.1.0",
+    "stringify-entities": "^4.0.4",
+    "style-to-object": "^1.0.8",
+    "styled-jsx": "^5.1.6",
+    "tailwindcss": "^4.0.9",
+    "tapable": "^2.2.1",
+    "tr46": "^0.0.3",
+    "trim-lines": "^3.0.1",
+    "trough": "^2.2.0",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.2",
+    "undici-types": "^6.20.0",
+    "unified": "^11.0.5",
+    "unist-util-is": "^6.0.0",
+    "unist-util-position": "^5.0.0",
+    "unist-util-stringify-position": "^4.0.0",
+    "unist-util-visit": "^5.0.0",
+    "unist-util-visit-parents": "^6.0.1",
+    "update-browserslist-db": "^1.1.3",
+    "use-composed-ref": "^1.4.0",
+    "use-isomorphic-layout-effect": "^1.2.0",
+    "use-latest": "^1.3.0",
+    "vfile": "^6.0.3",
+    "vfile-message": "^4.0.2",
+    "webidl-conversions": "^3.0.1",
+    "whatwg-url": "^5.0.0",
+    "ws": "^8.18.1",
+    "zwitch": "^2.0.4"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "lint": "next lint",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
