--- a/vital-aids/package.json
+++ b/vital-aids/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
+    "@radix-ui/react-toast": "^1.2.6",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/postcss": "^4.0.9",
     "bail": "^2.0.2",
@@ -16,6 +17,7 @@
     "character-entities-html4": "^2.1.0",
     "character-entities-legacy": "^3.0.0",
     "character-reference-invalid": "^2.0.1",
+    "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "color": "^4.2.3",
     "color-convert": "^2.0.1",
@@ -28,10 +30,12 @@
     "dequal": "^2.0.3",
     "detect-libc": "^2.0.3",
     "devlop": "^1.1.0",
+    "docxtemplater": "^3.60.1",
     "dotenv": "^16.4.7",
     "electron-to-chromium": "^1.5.109",
     "enhanced-resolve": "^5.18.1",
     "escalade": "^3.2.0",
+    "eslint": "^9.21.0",
     "estree-util-is-identifier-name": "^3.0.0",
     "extend": "^3.0.2",
     "fraction.js": "^4.3.7",
@@ -87,6 +91,7 @@
     "normalize-range": "^0.1.2",
     "parse-entities": "^4.0.2",
     "picocolors": "^1.1.1",
+    "pizzip": "^3.1.8",
     "postcss": "^8.5.3",
     "postcss-value-parser": "^4.2.0",
     "property-information": "^7.0.0",
@@ -107,6 +112,7 @@
     "stringify-entities": "^4.0.4",
     "style-to-object": "^1.0.8",
     "styled-jsx": "^5.1.6",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
     "tapable": "^2.2.1",
     "tr46": "^0.0.3",
