--- a/vital-aids/package.json
+++ b/vital-aids/package.json
@@ -136,6 +136,7 @@
     "webidl-conversions": "^3.0.1",
     "whatwg-url": "^5.0.0",
     "ws": "^8.18.1",
+    "zustand": "^5.0.3",
     "zwitch": "^2.0.4"
   },
   "scripts": {
