--- a/vital-aids/package.json
+++ b/vital-aids/package.json
@@ -51,8 +51,6 @@
     "is-hexadecimal": "^2.0.1",
     "is-plain-obj": "^4.1.0",
     "jiti": "^2.4.2",
-    "lightningcss": "^1.29.1",
-    "lightningcss-win32-x64-msvc": "^1.29.1",
     "longest-streak": "^3.1.0",
     "lucide-react": "^0.477.0",
     "mdast-util-from-markdown": "^2.0.2",
@@ -92,7 +90,6 @@
     "parse-entities": "^4.0.2",
     "picocolors": "^1.1.1",
     "pizzip": "^3.1.8",
-    "postcss": "^8.5.3",
     "postcss-value-parser": "^4.2.0",
     "property-information": "^7.0.0",
     "react": "^19.0.0",
@@ -113,7 +110,6 @@
     "style-to-object": "^1.0.8",
     "styled-jsx": "^5.1.6",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.9",
     "tapable": "^2.2.1",
     "tr46": "^0.0.3",
     "trim-lines": "^3.0.1",
@@ -149,5 +145,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "lightningcss": "^1.29.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.9"
+  }
 }
